Update gallery images with new sources

--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
         <section>
             <h2>Galería de ejemplo</h2>
             <div class="gallery">
-                <img src="https://via.placeholder.com/400x300?text=Rosa" alt="Rosa">
-                <img src="https://via.placeholder.com/400x300?text=Tulipán" alt="Tulipán">
-                <img src="https://via.placeholder.com/400x300?text=Narciso" alt="Narciso">
-                <img src="https://via.placeholder.com/400x300?text=Girasol" alt="Girasol">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/3/32/Rose_flower.jpg" alt="Rosa">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/Tulip_-_floriade_canberra.jpg" alt="Tulipán">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Narcissus_flower.jpg" alt="Narciso">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/4/40/Sunflower_sky_backdrop.jpg" alt="Girasol">
             </div>
         </section>
 
@@ -222,5 +222,6 @@
     </script>
 </body>
 </html>
+
 
 
