--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <img src="imagenes/rosa1024.jpg" alt="Rosa">
                 <img src="imagenes/tulipan1024.jpg" alt="Tulipán">
                 <img src="imagenes/narciso1024.jpg" alt="Narciso">
-                <img src="imageness/girasol1024.jpg" alt="Girasol">
+                <img src="imagenes/girasol1024.jpg" alt="Girasol">
             </div>
         </section>
 
