Fix HTML formatting and input accept attribute

--- a/index.html
+++ b/index.html
@@ -146,15 +146,12 @@
     <main>
         <section>
             <h2>Acerca del proyecto</h2>
-            <p>Este proyecto utiliza un dataset de flores con 4 clases: Rosas, Tulipanes, Narcisos y Girasoles. 
-            Se entrenó un modelo de Deep Learning para clasificar imágenes automáticamente. 
-            La interfaz permite subir imágenes y ver predicciones simuladas en tiempo real.</p>
+            <p>Este proyecto utiliza un dataset de flores con 4 clases: Rosas, Tulipanes, Narcisos y Girasoles. Se entrenó un modelo de Deep Learning para clasificar imágenes automáticamente. La interfaz permite subir imágenes y ver predicciones simuladas en tiempo real.</p>
         </section>
 
         <section>
             <h2>Modelo y Dataset</h2>
-            <p>El modelo está basado en redes neuronales convolucionales (CNN) usando PyTorch. 
-            Las imágenes del dataset tienen resolución de 1024x768 px y fueron preprocesadas para mejorar la precisión.</p>
+            <p>El modelo está basado en redes neuronales convolucionales (CNN) usando PyTorch. Las imágenes del dataset tienen resolución de 1024x768 px y fueron preprocesadas para mejorar la precisión.</p>
         </section>
 
         <section>
@@ -170,7 +167,7 @@
         <section class="upload-section">
             <h2>Prueba el modelo</h2>
             <p>Sube una imagen para ver cómo el modelo la clasificaría:</p>
-            <input type="file" id="fileInput" accept="imagenes/*">
+            <input type="file" id="fileInput" accept="image/*">
             <br>
             <button id="predictBtn">Predecir Flor</button>
             <p id="result"></p>
