--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                 <img src="imagenes/tulipan1024.jpg" alt="Tulipán">
                 <img src="imagenes/narciso1024.jpg" alt="Narciso">
                 <img src="imagenes/girasol1024.jpg" alt="Girasol">
+                <img src="imagenes/girasol1024.jpg" alt="Diente de león">
             </div>
         </section>
 
