--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <main>
         <section>
             <h2>Acerca del proyecto</h2>
-            <p>Este proyecto utiliza un dataset de flores con 4 clases: Rosas, Tulipanes, Narcisos y Girasoles. Se entrenó un modelo de Deep Learning para clasificar imágenes automáticamente. La interfaz permite subir imágenes y ver predicciones en tiempo real.</p>
+            <p>Este proyecto utiliza un dataset de flores con 4 clases: Rosas, Tulipanes, Narcisos, Girasoles y Diente de león. Se entrenó un modelo de Deep Learning para clasificar imágenes automáticamente. La interfaz permite subir imágenes y ver predicciones en tiempo real.</p>
         </section>
 
         <section>
@@ -97,7 +97,7 @@
                 <img src="imagenes/tulipan1024.jpg" alt="Tulipán">
                 <img src="imagenes/narciso1024.jpg" alt="Narciso">
                 <img src="imagenes/girasol1024.jpg" alt="Girasol">
-                <img src="imagenes/girasol1024.jpg" alt="Diente de león">
+                <img src="imagenes/dientedeleon1024.jpg" alt="Diente de león">
             </div>
         </section>
 
