--- a/index.html
+++ b/index.html
@@ -76,18 +76,20 @@
 <body>
     <header>
         <h1>TFM FLOWERS 🌸</h1>
-        <p>Clasificación de flores usando Deep Learning</p>
+        <p>Clasificación de flores con Deep Learning y Fastai</p>
     </header>
 
     <main>
         <section>
             <h2>Acerca del proyecto</h2>
-            <p>Este proyecto utiliza un dataset de flores con 5 clases: Rosas, Tulipanes, Narcisos, Girasoles y Diente de león. Se entrenó un modelo de Deep Learning para clasificar imágenes automáticamente. La interfaz permite subir imágenes y ver predicciones en tiempo real.</p>
+            <p>Este proyecto permite identificar automáticamente 5 tipos de flores: <strong>Rosa, Tulipán, Narciso, Girasol y Diente de león</strong>.  
+            Se entrenó un modelo de Deep Learning usando <strong>Fastai</strong> para lograr alta precisión. La interfaz permite subir imágenes y ver la predicción en tiempo real.</p>
         </section>
 
         <section>
             <h2>Modelo y Dataset</h2>
-            <p>El modelo está basado en redes neuronales convolucionales (CNN) usando PyTorch. Las imágenes del dataset tienen resolución de 1024x768 px y fueron preprocesadas para mejorar la precisión.</p>
+            <p>Se utilizó un modelo <strong>ResNet18</strong> preentrenado y ajustado (fine-tuning) con Fastai.  
+            Las imágenes se redimensionaron a 128x128 px y se dividieron automáticamente en conjuntos de entrenamiento y validación.</p>
         </section>
 
         <section>
@@ -103,7 +105,7 @@
 
         <section class="upload-section">
             <h2>Prueba el modelo</h2>
-            <p>Sube una imagen para ver cómo el modelo la clasificaría:</p>
+            <p>Sube una imagen y el modelo te dirá a qué flor pertenece:</p>
             <input type="file" id="fileInput" accept="image/*">
             <br>
             <button id="predictBtn">Predecir Flor</button>
@@ -124,7 +126,6 @@
         const resultDiv = document.getElementById('result');
         const previewImg = document.getElementById('previewImg');
 
-        // Mostrar preview al seleccionar imagen
         fileInput.addEventListener('change', () => {
             const file = fileInput.files[0];
             if (file) {
@@ -138,7 +139,6 @@
             }
         });
 
-        // Enviar imagen al backend
         predictBtn.addEventListener('click', () => {
             if (!fileInput.files[0]) {
                 alert("Selecciona una imagen primero");
@@ -171,6 +171,7 @@
     </script>
 </body>
 </html>
+
 
 
 
