--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TFM FLOWERS 🌸</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
@@ -36,6 +38,11 @@
             border-radius: 2px;
         }
         p { font-size: 1.1em; margin-bottom: 20px; }
+
+        /* Swiper */
+        .swiper-container { width: 100%; max-width: 600px; margin: 0 auto 40px; }
+        .swiper-slide img { width: 100%; border-radius: 12px; box-shadow: 0 10px 20px rgba(0,0,0,0.1); }
+
         .upload-section {
             background: #ffe4e1;
             padding: 40px 20px;
@@ -57,130 +64,128 @@
         }
         .upload-section button:hover { background: #ff3b6f; }
         #result { margin-top: 20px; font-size: 1.2em; color: #ff3b6f; }
+        .preview img { max-width:300px; border-radius:10px; display:none; box-shadow:0 10px 15px rgba(0,0,0,0.2); }
         footer { background: #ff6f91; color: white; text-align: center; padding: 25px 20px; font-size: 0.9em; }
-        /* Estilo del carrusel */
-        .swiper-container { width: 100%; max-width: 600px; margin: auto; }
-        .swiper-slide img { width: 100%; border-radius: 12px; }
     </style>
 </head>
 <body>
-    <header>
-        <h1>TFM FLOWERS 🌸</h1>
-        <p>Clasificación de flores con Deep Learning y Fastai</p>
-    </header>
 
-    <main>
-        <section>
-            <h2>Acerca del proyecto</h2>
-            <p>Este proyecto permite identificar automáticamente 5 tipos de flores: <strong>Rosa, Tulipán, Narciso, Girasol y Diente de león</strong>.  
-            Se entrenó un modelo de Deep Learning usando <strong>Fastai</strong> para lograr alta precisión. La interfaz permite subir imágenes y ver la predicción en tiempo real.</p>
-        </section>
+<header>
+    <h1>TFM FLOWERS 🌸</h1>
+    <p>Clasificación de flores con Deep Learning y Fastai</p>
+</header>
 
-        <section>
-            <h2>Modelo y Dataset</h2>
-            <p>Se utilizó un modelo <strong>ResNet18</strong> preentrenado y ajustado (fine-tuning) con Fastai.  
-            Las imágenes se redimensionaron a 128x128 px y se dividieron automáticamente en conjuntos de entrenamiento y validación.</p>
-        </section>
+<main>
+    <section>
+        <h2>Acerca del proyecto</h2>
+        <p>Este proyecto permite identificar automáticamente 5 tipos de flores: <strong>Rosa, Tulipán, Narciso, Girasol y Diente de león</strong>.  
+        Se entrenó un modelo de Deep Learning usando <strong>Fastai</strong> para lograr alta precisión. La interfaz permite subir imágenes y ver la predicción en tiempo real.</p>
+    </section>
 
-        <section>
-            <h2>Galería de ejemplo</h2>
-            <!-- Carrusel Swiper -->
-            <div class="swiper-container">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="imagenes/rosa1024.jpg" alt="Rosa"></div>
-                    <div class="swiper-slide"><img src="imagenes/tulipan1024.jpg" alt="Tulipán"></div>
-                    <div class="swiper-slide"><img src="imagenes/narciso1024.jpg" alt="Narciso"></div>
-                    <div class="swiper-slide"><img src="imagenes/girasol1024.jpg" alt="Girasol"></div>
-                    <div class="swiper-slide"><img src="imagenes/dientedeleon1024.jpg" alt="Diente de león"></div>
-                </div>
-                <!-- Botones de navegación -->
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
-                <!-- Paginación -->
-                <div class="swiper-pagination"></div>
+    <section>
+        <h2>Modelo y Dataset</h2>
+        <p>Se utilizó un modelo <strong>ResNet18</strong> preentrenado y ajustado (fine-tuning) con Fastai.  
+        Las imágenes se redimensionaron a 128x128 px y se dividieron automáticamente en conjuntos de entrenamiento y validación.</p>
+    </section>
+
+    <section>
+        <h2>Galería de ejemplo</h2>
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"><img src="imagenes/rosa1024.jpg" alt="Rosa"></div>
+                <div class="swiper-slide"><img src="imagenes/tulipan1024.jpg" alt="Tulipán"></div>
+                <div class="swiper-slide"><img src="imagenes/narciso1024.jpg" alt="Narciso"></div>
+                <div class="swiper-slide"><img src="imagenes/girasol1024.jpg" alt="Girasol"></div>
+                <div class="swiper-slide"><img src="imagenes/dientedeleon1024.jpg" alt="Diente de león"></div>
             </div>
-        </section>
+            <!-- Navegación y paginación -->
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
+        </div>
+    </section>
 
-        <section class="upload-section">
-            <h2>Prueba el modelo</h2>
-            <p>Sube una imagen y el modelo te dirá a qué flor pertenece:</p>
-            <input type="file" id="fileInput" accept="image/*">
-            <br>
-            <button id="predictBtn">Predecir Flor</button>
-            <p id="result"></p>
-            <div class="preview" style="margin-top:20px;">
-                <img id="previewImg" src="" alt="" style="max-width:300px; border-radius:10px; display:none; box-shadow:0 10px 15px rgba(0,0,0,0.2);">
-            </div>
-        </section>
-    </main>
+    <section class="upload-section">
+        <h2>Prueba el modelo</h2>
+        <p>Sube una imagen y el modelo te dirá a qué flor pertenece:</p>
+        <input type="file" id="fileInput" accept="image/*">
+        <br>
+        <button id="predictBtn">Predecir Flor</button>
+        <p id="result"></p>
+        <div class="preview">
+            <img id="previewImg" src="" alt="">
+        </div>
+    </section>
+</main>
 
-    <footer>
-        <p>TFM FLOWERS &copy; 2025 - Proyecto de Deep Learning</p>
-    </footer>
+<footer>
+    <p>TFM FLOWERS &copy; 2025 - Proyecto de Deep Learning</p>
+</footer>
 
-    <!-- Swiper JS -->
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script>
-        // Inicializar carrusel
-        var swiper = new Swiper('.swiper-container', {
-            loop: true,
-            pagination: { el: '.swiper-pagination', clickable: true },
-            navigation: { nextEl: '.swiper-button-next', prevEl: '.swiper-button-prev' },
-            autoplay: { delay: 3000, disableOnInteraction: false },
-        });
+<!-- Swiper JS -->
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
-        // Preview de imagen al subir
-        const fileInput = document.getElementById('fileInput');
-        const predictBtn = document.getElementById('predictBtn');
-        const resultDiv = document.getElementById('result');
-        const previewImg = document.getElementById('previewImg');
+<script>
+    // Inicializar Swiper
+    var swiper = new Swiper('.swiper-container', {
+        loop: true,
+        autoplay: { delay: 3000 },
+        navigation: { nextEl: '.swiper-button-next', prevEl: '.swiper-button-prev' },
+        pagination: { el: '.swiper-pagination', clickable: true },
+    });
 
-        fileInput.addEventListener('change', () => {
-            const file = fileInput.files[0];
-            if (file) {
-                const reader = new FileReader();
-                reader.onload = e => {
-                    previewImg.src = e.target.result;
-                    previewImg.style.display = 'block';
-                    resultDiv.textContent = '';
-                };
-                reader.readAsDataURL(file);
+    const fileInput = document.getElementById('fileInput');
+    const predictBtn = document.getElementById('predictBtn');
+    const resultDiv = document.getElementById('result');
+    const previewImg = document.getElementById('previewImg');
+
+    // Preview de imagen subida
+    fileInput.addEventListener('change', () => {
+        const file = fileInput.files[0];
+        if (file) {
+            const reader = new FileReader();
+            reader.onload = e => {
+                previewImg.src = e.target.result;
+                previewImg.style.display = 'block';
+                resultDiv.textContent = '';
+            };
+            reader.readAsDataURL(file);
+        }
+    });
+
+    // Enviar imagen al backend
+    predictBtn.addEventListener('click', () => {
+        if (!fileInput.files[0]) {
+            alert("Selecciona una imagen primero");
+            return;
+        }
+        const file = fileInput.files[0];
+        const formData = new FormData();
+        formData.append('file', file);
+
+        resultDiv.textContent = "Prediciendo...";
+
+        fetch('http://localhost:5000/predict', {
+            method: 'POST',
+            body: formData
+        })
+        .then(response => response.json())
+        .then(data => {
+            if (data.prediction) {
+                resultDiv.textContent = `La flor es: ${data.prediction} 🌸`;
+            } else {
+                resultDiv.textContent = 'Error en la predicción';
             }
+        })
+        .catch(err => {
+            console.error(err);
+            resultDiv.textContent = 'Error de conexión con el servidor';
         });
-
-        // Enviar imagen al backend
-        predictBtn.addEventListener('click', () => {
-            if (!fileInput.files[0]) {
-                alert("Selecciona una imagen primero");
-                return;
-            }
-
-            const file = fileInput.files[0];
-            const formData = new FormData();
-            formData.append('file', file);
-
-            resultDiv.textContent = "Prediciendo...";
-
-            fetch('http://localhost:5000/predict', {
-                method: 'POST',
-                body: formData
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.prediction) {
-                    resultDiv.textContent = `La flor es: ${data.prediction} 🌸`;
-                } else {
-                    resultDiv.textContent = 'Error en la predicción';
-                }
-            })
-            .catch(err => {
-                console.error(err);
-                resultDiv.textContent = 'Error de conexión con el servidor';
-            });
-        });
-    </script>
+    });
+</script>
 </body>
 </html>
+
 
 
 
